--- a/css/_form.scss
+++ b/css/_form.scss
@@ -85,6 +85,8 @@ label {
 input[type="text"],
 input[type="number"] {
   padding: v.$spacing-sm;
+  text-align: right;
+  padding-right: 55px;
   border-radius: 6px;
   width: 100%;
   margin-bottom: v.$spacing-xs;
