--- a/css/_login.scss
+++ b/css/_login.scss
@@ -1,6 +1,6 @@
 #login-page {
   width: 100%;
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: center; // centrowanie w pionie
   align-items: center; // centrowanie w poziomie
