--- a/css/_form.scss
+++ b/css/_form.scss
@@ -5,6 +5,7 @@
 // Formularz główny
 // ====================
 #mesurements-form {
+  display: none;
   padding: v.$spacing-lg;
   width: 100%;
   max-width: 600px;
@@ -86,7 +87,7 @@ input[type="text"],
 input[type="number"] {
   padding: v.$spacing-sm;
   text-align: right;
-  padding-right: 55px;
+  padding-right: 60px;
   border-radius: 6px;
   width: 100%;
   margin-bottom: v.$spacing-xs;
