--- a/css/main.css
+++ b/css/main.css
@@ -178,7 +178,7 @@ main {
 
 #login-page {
   width: 100%;
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -231,6 +231,7 @@ main {
 }
 
 #mesurements-form {
+  display: none;
   padding: 24px;
   width: 100%;
   max-width: 600px;
@@ -298,7 +299,7 @@ input[type=text],
 input[type=number] {
   padding: 8px;
   text-align: right;
-  padding-right: 55px;
+  padding-right: 60px;
   border-radius: 6px;
   width: 100%;
   margin-bottom: 4px;
