--- a/css/_base.scss
+++ b/css/_base.scss
@@ -16,6 +16,24 @@ body {
   font-weight: 500;
 }
 
+body.preloading main {
+  display: none;
+}
+
+.loader {
+  position: fixed;
+  inset: 0;
+  background: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Inter", sans-serif;
+  font-size: 1rem;
+  font-weight: 500;
+  color: #555;
+  z-index: 9999;
+}
+
 legend {
   font-size: v.$font-size-heading;
   font-weight: 500;
